update but still not turning on

--- a/adawriter.service
+++ b/adawriter.service
@@ -4,12 +4,12 @@ After=network.target
 
 [Service]
 Environment="SDL_VIDEODRIVER=dummy"
-ExecStart=/home/pi/AdaWriter/venv/bin/python3 /home/pi/AdaWriter/ada_writer.py
-WorkingDirectory=/home/pi/AdaWriter
+ExecStart=/home/admin/AdaWriter/venv/bin/python3 /home/admin/AdaWriter/ada_writer.py
+WorkingDirectory=/home/admin/AdaWriter
 StandardOutput=journal
 StandardError=journal
 Restart=always
-User=pi
+User=admin
 
 [Install]
 WantedBy=multi-user.target
