--- a/adawriter.service
+++ b/adawriter.service
@@ -5,12 +5,12 @@ After=network.target
 [Service]
 Environment="SDL_VIDEODRIVER=dummy"
 Environment="GPIOZERO_PIN_FACTORY=rpigpio"
-ExecStart=/home/admin/AdaWriter/venv/bin/python3 /home/admin/AdaWriter/ada_writer.py
-WorkingDirectory=/home/admin/AdaWriter
+ExecStart=/usr/bin/python3 /home/pi/AdaWriter/ada_writer.py
+WorkingDirectory=/home/pi/AdaWriter
 StandardOutput=journal
 StandardError=journal
 Restart=always
-User=root
+User=pi
 
 [Install]
 WantedBy=multi-user.target
