fix: Resolve provisioning and hardware detection
This commit addresses several issues related to device provisioning and e-ink screen initialization.

- Modifies provision.sh to create the Python virtual environment with --system-site-packages, allowing access to system-level libraries like gpiozero. This resolves the 'No module named gpiozero' error which was the root cause of the screen detection failure.
- Updates deploy.sh to correctly install pip packages within the user's virtual environment, fixing a permission error.
- Reverts the adawriter.service to run as the 'admin' user, as running as 'root' is no longer necessary.
- Cleans up diagnostic logging from display_manager.py.
- Adds gpiozero and RPi.GPIO to requirements.txt for clarity.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ python-docx # For creating .docx files from the web server
 
 # Note: The 'waveshare-epd' library is a hardware driver and must be installed separately from source.
 spidev      # For SPI bus communication with the e-paper display
+RPi.GPIO
+gpiozero
