--- a/adawriter.service
+++ b/adawriter.service
@@ -5,12 +5,12 @@ After=network.target
 [Service]
 Environment="SDL_VIDEODRIVER=dummy"
 Environment="GPIOZERO_PIN_FACTORY=rpigpio"
-ExecStart=/usr/bin/python3 /home/admin/AdaWriter/ada_writer.py
+ExecStart=/home/admin/AdaWriter/venv/bin/python3 /home/admin/AdaWriter/ada_writer.py
 WorkingDirectory=/home/admin/AdaWriter
 StandardOutput=journal
 StandardError=journal
 Restart=always
-User=admin
+User=root
 
 [Install]
 WantedBy=multi-user.target
